--- a/style.css
+++ b/style.css
@@ -402,8 +402,8 @@ footer{
 	text-align: left;
 	font: bold 16px sans-serif;
  
-	padding: 55px 50px;
-	margin-top: 80px;
+/* 	padding: 55px 50px; */
+/* 	margin-top: 80px; */
 }
  
 .footer-distributed .footer-left,
