--- a/style.css
+++ b/style.css
@@ -402,7 +402,7 @@ footer{
 	text-align: left;
 	font: bold 16px sans-serif;
  
-/* 	padding: 55px 50px; */
+	padding: 0;
 /* 	margin-top: 80px; */
 }
  
