--- a/style.css
+++ b/style.css
@@ -401,9 +401,8 @@ footer{
 	width: 100%;
 	text-align: left;
 	font: bold 16px sans-serif;
- 
-	padding: 0;
-/* 	margin-top: 80px; */
+	padding: 55px 50px;
+	margin-top: 0;
 }
  
 .footer-distributed .footer-left,
