--- a/style.css
+++ b/style.css
@@ -396,7 +396,7 @@ footer{
 }
 .footer-distributed{
 	background-color: #292c2f;
-	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+	box-shadow: 0 1px 1px 0 rgba(30, 30, 30);
 	box-sizing: border-box;
 	width: 100%;
 	text-align: left;
