--- a/style.css
+++ b/style.css
@@ -395,8 +395,8 @@ footer{
 	bottom: 0;
 }
 .footer-distributed{
-	background-color: #292c2f;
-	box-shadow: 0 1px 1px 0 rgba(30, 30, 30);
+	background-color: #1e1e1e;
+	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
 	box-sizing: border-box;
 	width: 100%;
 	text-align: left;
