--- a/style.css
+++ b/style.css
@@ -395,7 +395,7 @@ footer{
 	bottom: 0;
 }
 .footer-distributed{
-	background-color: #1e1e1e;
+	background-color: #292c2f;
 	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
 	box-sizing: border-box;
 	width: 100%;
