--- a/style.css
+++ b/style.css
@@ -249,9 +249,9 @@ header{
 }
 
 /*hero-fourth section*/ 
-.hero-fourth{
+/* .hero-fourth{
     background: url("images/hero/fourth/fourth_large.png");
-}
+} */
 
 /*fifth section*/ 
 .fifth{
