--- a/style.css
+++ b/style.css
@@ -307,9 +307,11 @@ header{
     margin-top: 20px;
     padding: 8px 20px;
     background-color: rgb(255, 0, 131);
-    color: #111;
+    color: rgb(255, 255, 255);
+    box-shadow: rgba(255, 0, 131, 0.5) 0px 10px 40px -10px;
     border-radius: 40px;
-    font-weight: 500;
+    font-weight: 300;
+    font-size: 1.5rem;
     letter-spacing: 1px;
     text-decoration: none;
     text-transform: uppercase;
