--- a/style.css
+++ b/style.css
@@ -64,7 +64,8 @@ header{
 .nav-link-deiko{
     width: 1.6rem;
     height: 4.4rem;
-    background: url("images/icons/cami.png") center no-repeat;
+/*     background: url("images/icons/cami.png") center no-repeat; */
+    background-color: white;
 }
 
 .nav-link-bag{
