--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ header{
 .nav-link-deiko{
     width: 1.6rem;
     height: 4.4rem;
-    background: url("images/icons/cami.svg") center no-repeat;
+    background: url("images/icons/logo.svg") center no-repeat;
 }
 
 .nav-link-bag{
